--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env DEBUG=one-chat-room:* nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "mocha": "mocha tests/**/*.test.js"
   },
   "dependencies": {
     "chalk": "^2.4.2",
@@ -20,8 +19,11 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "cross-env": "^5.2.0",
-    "nodemon": "^1.18.9"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.2"
   },
   "engines": {
     "node": "^10.0.0"
